css/stylesheet.css
/* css style of comments */ 
/* https://css-tricks.com/snippets/css/complete-guide-grid/ */


/* all common devices screen resolution */
/*
@media(min-width:320px){

}

@media(min-width:640px){

}

@media(min-width:960px){

}

@media(min-width:600px){

}

@media(min-width:1024px){

}

@media(min-width:1920px){
*/
.body_index {
    margin:0px;
    font-family: Arial, Helvetica, sans-serif;
    border:0px;
}
.main_index{
    /*background-image: url("../pic/student/student_girl.jpg");*/
    background-color: #6670ff;
    color: #fff;  
}
.footer_index {
    display: grid;
    grid-gap: 1px;
    grid-template-columns: repeat(auto-fill, 1fr);
    grid-template-rows: repeat(auto-fill, 1fr);
    background-color: white;
    color: rgb(255, 255, 255);
}
.footer_box{
    color: #fff;
    width:100%;
    border: 0px;  
}
.left_arrow{
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
    text-align:left;

}

.right_arrow{
    grid-column-start: 5;
    grid-column-end: 7;
    grid-row-start: 1;
    grid-row-end: 2;
    text-align:right;

}
.headen_key{
    grid-column-start: 3;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
    text-align:center;

}

.index_pictures{
    display: grid;
    grid-gap: 1px;
    grid-template-columns: repeat(auto-fill, 1fr);
    grid-template-rows: repeat(auto-fill, 1fr);
    background-color: white;
    color: rgb(255, 255, 255);
}

.box_index{
    
        background-color: white;
        color: #fff;
        border-radius: 5px;
        padding: 0px;
        font-size: 75%;
        text-align:center;
        font-weight:bold;
      
}
.taxi_picture_1 {

    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
  
  }
  .taxi__sign_picture_2 {

    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
  
  }
  .plane_picture_3 {

    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 2;
  
  }
  .train_picture_4 {

    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 3;
  
  }
  .character_picture_5 {

    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
  
  }
  .bus_picture_6 {

    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 2;
    grid-row-end: 3;
  
  }
  .car_picture_7 {

    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 3;
    grid-row-end: 4;
  
  }
  .bridge_picture_8 {

    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 3;
    grid-row-end: 4;
  
  }
.images{
    width:100%;
}

.arrow_image{
   width:18%;
   border-radius: 0%;
}

.student{
    border-radius: 0%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 20%;

}
/*
@media(min-width:3840px){


}
*/

